--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-  <title>Hello, World!</title>
+  <meta charset="UTF-8">
+  <title>Home</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+    .navbar {
+      background-color: green;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+    }
+    .navbar h1 {
+      color: grey;
+      font-size: 1.9rem;
+      font-weight: 900;
+      margin: 0;
+      flex-grow: 1;
+    }
+    .navbar a {
+      font-size: 1.2rem;
+      color: white;
+      font-weight: 900;
+      text-decoration: none;
+      padding: 0 10px;
+      border-right: 1px solid white;
+    }
+    .navbar a:last-child {
+      border-right: none;
+    }
+  </style>
 </head>
 <body>
-<div style="background: green; padding:0px 2px; display:block;">
-  <h1 style="color:grey; font-size:1.9rem;font-weight:900;">Bright LTD</h1> 
-  <span><a href="index.html" style="font-size:1.2rem; color:white; font-weight:900; text-decoration:none; border-right:1px solid white; padding-right:2px;">home</a>
-  <a href="about me.html" style="font-size:1.2rem; color:white; font-weight:900; text-decoration:none; border-right:1px solid white; padding-right:2px;">about</a>
-  <a href="contact.html" style="font-size:1.2rem; color:white; font-weight:900; text-decoration:none;">contact</a></span>
-  <span> </div>
+  <div class="navbar">
+    <h1>Bright LTD</h1>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </div>
+
+  <section>
+    <h2>Welcome to My Website</h2>
+    <p>Hi, I’m Lee, and I am a computer science student at Captain Elechi Amadi Polytechnic. 
+    Welcome to my website where I showcase my academic and personal projects. Explore the links above to learn more about me or to get in touch.</p>
+  </section>
 </body>
 </html>
